examples/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-deployment
  labels:
    app: hello
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: the-container
          image: monopole/hello
          command: ["/hello", "--port=8080"]
          ports:
            - containerPort: 8080
