examples/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: the-ingress
  labels:
    app: hello
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /the-path
            backend:
              serviceName: the-service
              servicePort: 80
